# Agente_dise-ador

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
mi_proyecto/chat/: forms.py  models.py  urls.py  views.py
mi_proyecto/chat/migrations/: 0001_initial.py
mi_proyecto/chat/services/: openai_client.py
mi_proyecto/chat/templates/chat/: index.html
mi_proyecto/chat/templatetags/: md_extras.py
mi_proyecto/mi_proyecto/: settings.py  urls.py
mi_proyecto/productos/: models.py  views.py
mi_proyecto/productos/migrations/: 0001_initial.py  0002_remove_mensaje_conversacion_delete_conversacion_and_more.py  0003_initial.py
mi_proyecto/productos/templates/productos/: inicio.html
mi_proyecto/usuarios/: forms.py  urls.py  views.py
mi_proyecto/usuarios/templates/usuarios/: login.html  perfil.html  register.html
