[project]
name = "mi-proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "environ>=1.0",
    "gunicorn>=26.0.0",
    "openai>=2.38.0",
    "psycopg2-binary>=2.9.12",
    "whitenoise>=6.12.0",
]
